k8s/apps/umami-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: umami-proxy
  namespace: matflixlab
spec:
  selector:
    app: umami-proxy
  ports:
    - port: 5000
      targetPort: 5000
