k8s/apps/umami-proxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: umami-proxy
  namespace: matflixlab
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: umami-proxy.matflixlab.pl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: umami-proxy
                port:
                  number: 5000
